# quickSort_prj

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
Archive/: TestingPivotmode_1.cpp  mainCode_1.cpp  makingRandom.cpp  makingSorted  makingSorted.cpp  makingSorted_reverse  makingSorted_reverse.cpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/Measuretime/: CMakeLists.txt  Makefile  MeasureTime.cpp  MeasureTime.hpp  cmake_install.cmake
src/QuickSort/: CMakeLists.txt  Makefile  QuickSort.Test.cpp  QuickSort.hpp  cmake_install.cmake
src/QuickSort/test/: QuickSort.Test1.cpp
src/QuickSortPivot/: CMakeLists.txt  Makefile  PivotMode.hpp  QuickSortPivot.cpp  QuickSortPivot.hpp  cmake_install.cmake
src/QuickSortPivot/Test/: QuickSortPivotTester.hpp
src/RealRandom/: CMakeLists.txt  Makefile  cmake_install.cmake  realRandom_urandom.hpp  realRandom_urandom.spec.cpp
